# quilt

./: .gitignore  BUG.md  CLAUDE.md  Cargo.toml  LATESTFIXES.md  PLAN.md  PRODUCTION_READY.md  QUILT-KUBERNETES.md  QUILT.md  README.md  SYNC-ENGINE.md  SYNCENGINE.md  SYNCSTATS.md  benchmark_sync_engine.sh  debug_bridge.sh  debug_bridge_context.sh  debug_network_setup.sh  dev.sh  diagnostic_test.sh  flake.nix  quick_test.sh  quilt.db  quilt.db-shm  quilt.db-wal  simple_test.sh  stress_test_full_e2e.sh  stress_test_icc.sh  test_bridge_connectivity.sh  test_busybox_ping.sh  test_container_connectivity.sh  test_container_functionality.sh  test_dns_connectivity.sh  test_dns_debug.sh  test_dns_diagnosis.sh  test_dns_nslookup.sh  test_dns_real_output.sh  test_icc.sh  test_network_forwarding.sh  test_new_features.sh  test_resolv_conf.sh  (+4 more)
.cargo/: config.toml
proto/: quilt.proto
quilt-cli/: Cargo.toml  build.rs
quilt-cli/src/: main.rs
scripts/: build.rs  dev.sh
src/: cgroup.rs  main.rs  namespace.rs  runtime.rs  runtime_manager.rs  system_runtime.rs
src/cli/: containers.rs  icc.rs  main.rs  mod.rs
src/daemon/: cgroup.rs  events.rs  manager.rs  metrics.rs  mod.rs  namespace.rs  readiness.rs  resource.rs  runtime.rs  system.rs
src/grpc/: container_ops.rs  helpers.rs  mod.rs  monitoring_ops.rs  tests.rs  volume_ops.rs
src/icc/: dns.rs  messaging.rs  mod.rs  network.rs  network.rs.backup
src/icc/network/: bridge.rs  diagnostics.rs  dns_manager.rs  mod.rs  security.rs  veth.rs
src/sync/: cleanup.rs  connection.rs  containers.rs  engine.rs  error.rs  events.rs  metrics.rs  mod.rs  monitor.rs  network.rs  schema.rs  volumes.rs
src/utils/: command.rs  console.rs  filesystem.rs  image.rs  logger.rs  mod.rs  process.rs  security.rs  validation.rs
tests/: focused_test.sh  ping_test.sh  quick_test_2.sh  run_test_clean.sh  stress_test_full_e2e.sh  stress_test_network_baseline.sh  test_fixes.sh  test_icc.sh  test_icc_basic_connectivity.sh  test_icc_bridge_networking.sh  test_icc_comprehensive.sh  test_icc_comprehensive.sh.backup  test_icc_dns_resolution.sh  test_icc_exec_commands.sh  test_icc_mac_address_fix.sh  test_icc_network_ping.sh  test_icc_networking.sh  test_metrics_observability.sh  test_name_features.sh  test_parallel_startup_success.sh  test_production_containers.sh  test_resource_cleanup.sh  test_volumes.sh  test_volumes_comprehensive.sh  verify_features.sh
