[package]
name = "quilt"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
nix = { version = "0.27", features = ["mount", "sched", "process"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1.0"

[build-dependencies]
tonic-build = "0.11"
