[package]
name = "quilt"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
nix = { version = "0.27", features = ["mount", "sched", "process", "signal", "fs", "hostname"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1.0"

[build-dependencies]
tonic-build = "0.11"

# Added to reduce debug symbols for dev builds to help with OOM linker errors
[profile.dev]
debug = "line-tables-only" # Or 0 for no debug symbols, or 1 for limited symbols. "line-tables-only" is a good compromise.
strip = "symbols"          # Further reduce size by stripping symbols
