[package]
name = "quilt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11" 